// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mungo examples: ast test/fixtures/ThreeParties/BobProtocol.protocol 1`] = `
Object {
  "name": "BobProtocol",
  "states": Array [
    Object {
      "_name": "Connect",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "connect",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "GreetAlice",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "Connect",
      "type": "State",
    },
    Object {
      "_name": "GreetAlice",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "sendHelloToAlice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "GreetCarol",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "GreetAlice",
      "type": "State",
    },
    Object {
      "_name": "GreetCarol",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "sendHelloToCarol",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "MakeChoice",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "GreetCarol",
      "type": "State",
    },
    Object {
      "_name": "MakeChoice",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "sendTimeChoiceToAlice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "_name": "unknown:5",
            "methods": Array [
              Object {
                "arguments": Array [],
                "name": "recvTimeFromAlice",
                "returnType": Object {
                  "name": "int",
                  "type": "Type",
                },
                "transition": Object {
                  "name": "EndProtocol",
                  "type": "Identifier",
                },
                "type": "Method",
              },
            ],
            "name": null,
            "type": "State",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "sendTimeChoiceToCarol",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "_name": "unknown:6",
            "methods": Array [
              Object {
                "arguments": Array [],
                "name": "recvTimeFromCarol",
                "returnType": Object {
                  "name": "int",
                  "type": "Type",
                },
                "transition": Object {
                  "name": "EndProtocol",
                  "type": "Identifier",
                },
                "type": "Method",
              },
            ],
            "name": null,
            "type": "State",
          },
          "type": "Method",
        },
      ],
      "name": "MakeChoice",
      "type": "State",
    },
    Object {
      "_name": "EndProtocol",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "endCommunication",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "_name": "end",
            "methods": Array [],
            "name": null,
            "type": "State",
          },
          "type": "Method",
        },
      ],
      "name": "EndProtocol",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/ThreeParties/FriendProtocol.protocol 1`] = `
Object {
  "name": "FriendProtocol",
  "states": Array [
    Object {
      "_name": "Init",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "connect",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "_name": "unknown:2",
            "methods": Array [
              Object {
                "arguments": Array [],
                "name": "recvHelloFromBob",
                "returnType": Object {
                  "name": "String",
                  "type": "Type",
                },
                "transition": Object {
                  "name": "ReceiveChoice",
                  "type": "Identifier",
                },
                "type": "Method",
              },
            ],
            "name": null,
            "type": "State",
          },
          "type": "Method",
        },
      ],
      "name": "Init",
      "type": "State",
    },
    Object {
      "_name": "ReceiveChoice",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "recvChoiceFromBob",
          "returnType": Object {
            "name": "BobChoice",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:1",
            "transitions": Array [
              Array [
                Object {
                  "name": "TIME",
                  "type": "Type",
                },
                "SendTime",
              ],
              Array [
                Object {
                  "name": "END",
                  "type": "Type",
                },
                "EndProtocol",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
      ],
      "name": "ReceiveChoice",
      "type": "State",
    },
    Object {
      "_name": "SendTime",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "sendTimeToBob",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "EndProtocol",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "SendTime",
      "type": "State",
    },
    Object {
      "_name": "EndProtocol",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "endCommunication",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "EndProtocol",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/TwoParties/AliceProtocol.protocol 1`] = `
Object {
  "name": "AliceProtocol",
  "states": Array [
    Object {
      "_name": "Init",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "connect",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "_name": "unknown:2",
            "methods": Array [
              Object {
                "arguments": Array [],
                "name": "recvStringFromBob",
                "returnType": Object {
                  "name": "String",
                  "type": "Type",
                },
                "transition": Object {
                  "name": "ReceiveChoice",
                  "type": "Identifier",
                },
                "type": "Method",
              },
            ],
            "name": null,
            "type": "State",
          },
          "type": "Method",
        },
      ],
      "name": "Init",
      "type": "State",
    },
    Object {
      "_name": "ReceiveChoice",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "choiceFromBob",
          "returnType": Object {
            "name": "BobChoice",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:1",
            "transitions": Array [
              Array [
                Object {
                  "name": "TIME",
                  "type": "Type",
                },
                "SendTime",
              ],
              Array [
                Object {
                  "name": "GREET",
                  "type": "Type",
                },
                "HowAreYou",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
      ],
      "name": "ReceiveChoice",
      "type": "State",
    },
    Object {
      "_name": "SendTime",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "sendTimeToBob",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "EndProtocol",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "SendTime",
      "type": "State",
    },
    Object {
      "_name": "HowAreYou",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "sendGreetToBob",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "EndProtocol",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "HowAreYou",
      "type": "State",
    },
    Object {
      "_name": "EndProtocol",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "endCommunication",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "EndProtocol",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/TwoParties/BobProtocol.protocol 1`] = `
Object {
  "name": "BobProtocol",
  "states": Array [
    Object {
      "_name": "Init",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "connect",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "_name": "unknown:2",
            "methods": Array [
              Object {
                "arguments": Array [
                  Object {
                    "name": "String",
                    "type": "Type",
                  },
                ],
                "name": "sendStringToAlice",
                "returnType": Object {
                  "name": "void",
                  "type": "Type",
                },
                "transition": Object {
                  "name": "SendChoice",
                  "type": "Identifier",
                },
                "type": "Method",
              },
            ],
            "name": null,
            "type": "State",
          },
          "type": "Method",
        },
      ],
      "name": "Init",
      "type": "State",
    },
    Object {
      "_name": "SendChoice",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "sendTimeChoiceToAlice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "_name": "unknown:4",
            "methods": Array [
              Object {
                "arguments": Array [],
                "name": "recvTimeFromAlice",
                "returnType": Object {
                  "name": "int",
                  "type": "Type",
                },
                "transition": Object {
                  "name": "EndProtocol",
                  "type": "Identifier",
                },
                "type": "Method",
              },
            ],
            "name": null,
            "type": "State",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "sendGreetingChoiceToAlice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "_name": "unknown:5",
            "methods": Array [
              Object {
                "arguments": Array [],
                "name": "recvGreetingFromAlice",
                "returnType": Object {
                  "name": "String",
                  "type": "Type",
                },
                "transition": Object {
                  "name": "EndProtocol",
                  "type": "Identifier",
                },
                "type": "Method",
              },
            ],
            "name": null,
            "type": "State",
          },
          "type": "Method",
        },
      ],
      "name": "SendChoice",
      "type": "State",
    },
    Object {
      "_name": "EndProtocol",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "endCommunication",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "_name": "end",
            "methods": Array [],
            "name": null,
            "type": "State",
          },
          "type": "Method",
        },
      ],
      "name": "EndProtocol",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/collection/CollectionProtocol.protocol 1`] = `
Object {
  "name": "CollectionProtocol",
  "states": Array [
    Object {
      "_name": "Init",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "initialise",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "Empty",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "Init",
      "type": "State",
    },
    Object {
      "_name": "Empty",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Node",
              "type": "Type",
            },
          ],
          "name": "put",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "NonEmpty",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "close",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "Empty",
      "type": "State",
    },
    Object {
      "_name": "NonEmpty",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Node",
              "type": "Type",
            },
          ],
          "name": "put",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "NonEmpty",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "get",
          "returnType": Object {
            "name": "Node",
            "type": "Type",
          },
          "transition": Object {
            "name": "Unknown",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "NonEmpty",
      "type": "State",
    },
    Object {
      "_name": "Unknown",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Node",
              "type": "Type",
            },
          ],
          "name": "put",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "NonEmpty",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "isEmpty",
          "returnType": Object {
            "name": "BooleanChoice",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:1",
            "transitions": Array [
              Array [
                Object {
                  "name": "TRUE",
                  "type": "Type",
                },
                "Empty",
              ],
              Array [
                Object {
                  "name": "FALSE",
                  "type": "Type",
                },
                "NonEmpty",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
      ],
      "name": "Unknown",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/collection/StackUser/StackUserProtocol.protocol 1`] = `
Object {
  "name": "StackUserProtocol",
  "states": Array [
    Object {
      "_name": "Init",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Stack",
              "type": "Type",
            },
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "Stack",
            "type": "Type",
          },
          "transition": Object {
            "name": "Consume",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [
            Object {
              "name": "Stack",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "Stack",
            "type": "Type",
          },
          "transition": Object {
            "name": "Consume",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "close",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "Init",
      "type": "State",
    },
    Object {
      "_name": "Consume",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Stack",
              "type": "Type",
            },
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "Stack",
            "type": "Type",
          },
          "transition": Object {
            "name": "Consume",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [
            Object {
              "name": "Stack",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "Stack",
            "type": "Type",
          },
          "transition": Object {
            "name": "Consume",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [
            Object {
              "name": "Stack",
              "type": "Type",
            },
          ],
          "name": "consume",
          "returnType": Object {
            "name": "Stack",
            "type": "Type",
          },
          "transition": Object {
            "name": "Init",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "Consume",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/collection/StackUser2/StackUserProtocol.protocol 1`] = `
Object {
  "name": "StackUserProtocol",
  "states": Array [
    Object {
      "_name": "Init",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "Consume",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "produce",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "Consume",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "close",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "Init",
      "type": "State",
    },
    Object {
      "_name": "Consume",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "Consume",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "produce",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "Consume",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "consume",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "Init",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "Consume",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/distributed-client-travelagency-bank/AProtocol.protocol 1`] = `
Object {
  "name": "AProtocol",
  "states": Array [
    Object {
      "_name": "State0",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_requestStringFromC",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "transition": Object {
            "name": "State1",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State0",
      "type": "State",
    },
    Object {
      "_name": "State1",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "send_dataintToC",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State2",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State1",
      "type": "State",
    },
    Object {
      "_name": "State2",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_Choice1LabelFromB",
          "returnType": Object {
            "name": "Choice1",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:1",
            "transitions": Array [
              Array [
                Object {
                  "name": "APPROVE",
                  "type": "Type",
                },
                "State3",
              ],
              Array [
                Object {
                  "name": "REFUSE",
                  "type": "Type",
                },
                "State5",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
      ],
      "name": "State2",
      "type": "State",
    },
    Object {
      "_name": "State3",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_approveBooleanFromB",
          "returnType": Object {
            "name": "Boolean",
            "type": "Type",
          },
          "transition": Object {
            "name": "State4",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State3",
      "type": "State",
    },
    Object {
      "_name": "State4",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "send_invoiceStringToBC",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State4",
      "type": "State",
    },
    Object {
      "_name": "State5",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_refuseBooleanFromB",
          "returnType": Object {
            "name": "Boolean",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State5",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/distributed-client-travelagency-bank/BProtocol.protocol 1`] = `
Object {
  "name": "BProtocol",
  "states": Array [
    Object {
      "_name": "State0",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_paymentintFromC",
          "returnType": Object {
            "name": "int",
            "type": "Type",
          },
          "transition": Object {
            "name": "State1",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State0",
      "type": "State",
    },
    Object {
      "_name": "State1",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "send_APPROVEToCA",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State2",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "send_REFUSEToCA",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State4",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State1",
      "type": "State",
    },
    Object {
      "_name": "State2",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Boolean",
              "type": "Type",
            },
          ],
          "name": "send_approveBooleanToCA",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State3",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State2",
      "type": "State",
    },
    Object {
      "_name": "State3",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_invoiceStringFromA",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State3",
      "type": "State",
    },
    Object {
      "_name": "State4",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Boolean",
              "type": "Type",
            },
          ],
          "name": "send_refuseBooleanToCA",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State4",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/distributed-client-travelagency-bank/Bank.protocol 1`] = `
Object {
  "name": "BankProtocol",
  "states": Array [
    Object {
      "_name": "State0",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receivePayment",
          "returnType": Object {
            "name": "Data",
            "type": "Type",
          },
          "transition": Object {
            "name": "State1",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State0",
      "type": "State",
    },
    Object {
      "_name": "State1",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "boolean",
              "type": "Type",
            },
          ],
          "name": "sendApproval",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State1",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/distributed-client-travelagency-bank/CProtocol.protocol 1`] = `
Object {
  "name": "CProtocol",
  "states": Array [
    Object {
      "_name": "State0",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "send_requestStringToA",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State1",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State0",
      "type": "State",
    },
    Object {
      "_name": "State1",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_dataintFromA",
          "returnType": Object {
            "name": "int",
            "type": "Type",
          },
          "transition": Object {
            "name": "State2",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State1",
      "type": "State",
    },
    Object {
      "_name": "State2",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "send_paymentintToB",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State3",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State2",
      "type": "State",
    },
    Object {
      "_name": "State3",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_Choice1LabelFromB",
          "returnType": Object {
            "name": "Choice1",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:1",
            "transitions": Array [
              Array [
                Object {
                  "name": "APPROVE",
                  "type": "Type",
                },
                "State4",
              ],
              Array [
                Object {
                  "name": "REFUSE",
                  "type": "Type",
                },
                "State6",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
      ],
      "name": "State3",
      "type": "State",
    },
    Object {
      "_name": "State4",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_approveBooleanFromB",
          "returnType": Object {
            "name": "Boolean",
            "type": "Type",
          },
          "transition": Object {
            "name": "State5",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State4",
      "type": "State",
    },
    Object {
      "_name": "State5",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_invoiceStringFromA",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State5",
      "type": "State",
    },
    Object {
      "_name": "State6",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receive_refuseBooleanFromB",
          "returnType": Object {
            "name": "Boolean",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State6",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/distributed-client-travelagency-bank/Client.protocol 1`] = `
Object {
  "name": "ClientProtocol",
  "states": Array [
    Object {
      "_name": "State0",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Travel",
              "type": "Type",
            },
          ],
          "name": "sendRequest",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State1",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State0",
      "type": "State",
    },
    Object {
      "_name": "State1",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receiveData",
          "returnType": Object {
            "name": "Data",
            "type": "Type",
          },
          "transition": Object {
            "name": "State2",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State1",
      "type": "State",
    },
    Object {
      "_name": "State2",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Data",
              "type": "Type",
            },
          ],
          "name": "payment",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State3",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State2",
      "type": "State",
    },
    Object {
      "_name": "State3",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receiveApproval",
          "returnType": Object {
            "name": "boolean",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:1",
            "transitions": Array [
              Array [
                Object {
                  "name": "true",
                  "type": "Type",
                },
                "State4",
              ],
              Array [
                Object {
                  "name": "false",
                  "type": "Type",
                },
                "end",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
      ],
      "name": "State3",
      "type": "State",
    },
    Object {
      "_name": "State4",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receiveInvoice",
          "returnType": Object {
            "name": "Invoice",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State4",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/distributed-client-travelagency-bank/TravelAgency.protocol 1`] = `
Object {
  "name": "TravelAgencyProtocol",
  "states": Array [
    Object {
      "_name": "State0",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receiveRequest",
          "returnType": Object {
            "name": "Travel",
            "type": "Type",
          },
          "transition": Object {
            "name": "State1",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State0",
      "type": "State",
    },
    Object {
      "_name": "State1",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Data",
              "type": "Type",
            },
          ],
          "name": "sendData",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State2",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State1",
      "type": "State",
    },
    Object {
      "_name": "State2",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receiveApproval",
          "returnType": Object {
            "name": "boolean",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:1",
            "transitions": Array [
              Array [
                Object {
                  "name": "true",
                  "type": "Type",
                },
                "State3",
              ],
              Array [
                Object {
                  "name": "false",
                  "type": "Type",
                },
                "end",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
      ],
      "name": "State2",
      "type": "State",
    },
    Object {
      "_name": "State3",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "Invoice",
              "type": "Type",
            },
          ],
          "name": "sendInvoice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State3",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/file.protocol 1`] = `
Object {
  "name": "FileProtocol",
  "states": Array [
    Object {
      "_name": "Init",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "open",
          "returnType": Object {
            "name": "Status",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:1",
            "transitions": Array [
              Array [
                Object {
                  "name": "OK",
                  "type": "Type",
                },
                "Open",
              ],
              Array [
                Object {
                  "name": "ERROR",
                  "type": "Type",
                },
                "end",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
      ],
      "name": "Init",
      "type": "State",
    },
    Object {
      "_name": "Open",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "hasNext",
          "returnType": Object {
            "name": "Boolean",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:2",
            "transitions": Array [
              Array [
                Object {
                  "name": "TRUE",
                  "type": "Type",
                },
                "Read",
              ],
              Array [
                Object {
                  "name": "FALSE",
                  "type": "Type",
                },
                "Close",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [],
          "name": "close",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "Open",
      "type": "State",
    },
    Object {
      "_name": "Read",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "read",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "Open",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "Read",
      "type": "State",
    },
    Object {
      "_name": "Close",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "close",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "end",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "Close",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/infinite/BankProtocol.protocol 1`] = `
Object {
  "name": "BankProtocol",
  "states": Array [
    Object {
      "_name": "State0",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receivePayment",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State0",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State0",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/local-client-travelagency-bank/BankProtocol.protocol 1`] = `
Object {
  "name": "BankProtocol",
  "states": Array [
    Object {
      "_name": "State0",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "receivePayment",
          "returnType": Object {
            "name": "PaymentStatus",
            "type": "Type",
          },
          "transition": Object {
            "name": "State0",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State0",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/local-client-travelagency-bank/ClientProtocol.protocol 1`] = `
Object {
  "name": "ClientProtocol",
  "states": Array [
    Object {
      "_name": "State0",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receiveInfo",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "transition": Object {
            "name": "State0",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "sendRequest",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State1",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State0",
      "type": "State",
    },
    Object {
      "_name": "State1",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "tryPayment",
          "returnType": Object {
            "name": "PaymentStatus",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:1",
            "transitions": Array [
              Array [
                Object {
                  "name": "OK",
                  "type": "Type",
                },
                "State2",
              ],
              Array [
                Object {
                  "name": "KO",
                  "type": "Type",
                },
                "State0",
              ],
              Array [
                Object {
                  "name": "TA",
                  "type": "Type",
                },
                "State1",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
      ],
      "name": "State1",
      "type": "State",
    },
    Object {
      "_name": "State2",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "receiveInvoice",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "transition": Object {
            "name": "State0",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State2",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: ast test/fixtures/local-client-travelagency-bank/TravelAgencyProtocol.protocol 1`] = `
Object {
  "name": "TravelAgencyProtocol",
  "states": Array [
    Object {
      "_name": "State0",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "getInfo",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "transition": Object {
            "name": "State0",
            "type": "Identifier",
          },
          "type": "Method",
        },
        Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "receiveRequest",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "transition": Object {
            "name": "State1",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State0",
      "type": "State",
    },
    Object {
      "_name": "State1",
      "methods": Array [
        Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "tryPayment",
          "returnType": Object {
            "name": "PaymentStatus",
            "type": "Type",
          },
          "transition": Object {
            "_name": "decision:1",
            "transitions": Array [
              Array [
                Object {
                  "name": "OK",
                  "type": "Type",
                },
                "State2",
              ],
              Array [
                Object {
                  "name": "KO",
                  "type": "Type",
                },
                "State0",
              ],
              Array [
                Object {
                  "name": "TA",
                  "type": "Type",
                },
                "State1",
              ],
            ],
            "type": "DecisionState",
          },
          "type": "Method",
        },
      ],
      "name": "State1",
      "type": "State",
    },
    Object {
      "_name": "State2",
      "methods": Array [
        Object {
          "arguments": Array [],
          "name": "getInvoice",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "transition": Object {
            "name": "State0",
            "type": "Identifier",
          },
          "type": "Method",
        },
      ],
      "name": "State2",
      "type": "State",
    },
  ],
  "type": "Typestate",
}
`;

exports[`mungo examples: automaton test/fixtures/ThreeParties/BobProtocol.protocol 1`] = `
Object {
  "Connect": Object {
    "name": "Connect",
    "transitions": Array [
      Object {
        "to": "GreetAlice",
        "transition": Object {
          "arguments": Array [],
          "name": "connect",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "EndProtocol": Object {
    "name": "EndProtocol",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "endCommunication",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "GreetAlice": Object {
    "name": "GreetAlice",
    "transitions": Array [
      Object {
        "to": "GreetCarol",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "sendHelloToAlice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "GreetCarol": Object {
    "name": "GreetCarol",
    "transitions": Array [
      Object {
        "to": "MakeChoice",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "sendHelloToCarol",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "MakeChoice": Object {
    "name": "MakeChoice",
    "transitions": Array [
      Object {
        "to": "unknown:5",
        "transition": Object {
          "arguments": Array [],
          "name": "sendTimeChoiceToAlice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "unknown:6",
        "transition": Object {
          "arguments": Array [],
          "name": "sendTimeChoiceToCarol",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
  "unknown:5": Object {
    "name": "unknown:5",
    "transitions": Array [
      Object {
        "to": "EndProtocol",
        "transition": Object {
          "arguments": Array [],
          "name": "recvTimeFromAlice",
          "returnType": Object {
            "name": "int",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "unknown:6": Object {
    "name": "unknown:6",
    "transitions": Array [
      Object {
        "to": "EndProtocol",
        "transition": Object {
          "arguments": Array [],
          "name": "recvTimeFromCarol",
          "returnType": Object {
            "name": "int",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/ThreeParties/FriendProtocol.protocol 1`] = `
Object {
  "EndProtocol": Object {
    "name": "EndProtocol",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "endCommunication",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "Init": Object {
    "name": "Init",
    "transitions": Array [
      Object {
        "to": "unknown:2",
        "transition": Object {
          "arguments": Array [],
          "name": "connect",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "ReceiveChoice": Object {
    "name": "ReceiveChoice",
    "transitions": Array [
      Object {
        "to": "decision:1",
        "transition": Object {
          "arguments": Array [],
          "name": "recvChoiceFromBob",
          "returnType": Object {
            "name": "BobChoice",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "SendTime": Object {
    "name": "SendTime",
    "transitions": Array [
      Object {
        "to": "EndProtocol",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "sendTimeToBob",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "decision:1": Object {
    "name": "decision:1",
    "transitions": Array [
      Object {
        "to": "SendTime",
        "transition": Object {
          "label": Object {
            "name": "TIME",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "EndProtocol",
        "transition": Object {
          "label": Object {
            "name": "END",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
  "unknown:2": Object {
    "name": "unknown:2",
    "transitions": Array [
      Object {
        "to": "ReceiveChoice",
        "transition": Object {
          "arguments": Array [],
          "name": "recvHelloFromBob",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/TwoParties/AliceProtocol.protocol 1`] = `
Object {
  "EndProtocol": Object {
    "name": "EndProtocol",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "endCommunication",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "HowAreYou": Object {
    "name": "HowAreYou",
    "transitions": Array [
      Object {
        "to": "EndProtocol",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "sendGreetToBob",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "Init": Object {
    "name": "Init",
    "transitions": Array [
      Object {
        "to": "unknown:2",
        "transition": Object {
          "arguments": Array [],
          "name": "connect",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "ReceiveChoice": Object {
    "name": "ReceiveChoice",
    "transitions": Array [
      Object {
        "to": "decision:1",
        "transition": Object {
          "arguments": Array [],
          "name": "choiceFromBob",
          "returnType": Object {
            "name": "BobChoice",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "SendTime": Object {
    "name": "SendTime",
    "transitions": Array [
      Object {
        "to": "EndProtocol",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "sendTimeToBob",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "decision:1": Object {
    "name": "decision:1",
    "transitions": Array [
      Object {
        "to": "SendTime",
        "transition": Object {
          "label": Object {
            "name": "TIME",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "HowAreYou",
        "transition": Object {
          "label": Object {
            "name": "GREET",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
  "unknown:2": Object {
    "name": "unknown:2",
    "transitions": Array [
      Object {
        "to": "ReceiveChoice",
        "transition": Object {
          "arguments": Array [],
          "name": "recvStringFromBob",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/TwoParties/BobProtocol.protocol 1`] = `
Object {
  "EndProtocol": Object {
    "name": "EndProtocol",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "endCommunication",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "Init": Object {
    "name": "Init",
    "transitions": Array [
      Object {
        "to": "unknown:2",
        "transition": Object {
          "arguments": Array [],
          "name": "connect",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "SendChoice": Object {
    "name": "SendChoice",
    "transitions": Array [
      Object {
        "to": "unknown:4",
        "transition": Object {
          "arguments": Array [],
          "name": "sendTimeChoiceToAlice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "unknown:5",
        "transition": Object {
          "arguments": Array [],
          "name": "sendGreetingChoiceToAlice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
  "unknown:2": Object {
    "name": "unknown:2",
    "transitions": Array [
      Object {
        "to": "SendChoice",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "sendStringToAlice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "unknown:4": Object {
    "name": "unknown:4",
    "transitions": Array [
      Object {
        "to": "EndProtocol",
        "transition": Object {
          "arguments": Array [],
          "name": "recvTimeFromAlice",
          "returnType": Object {
            "name": "int",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "unknown:5": Object {
    "name": "unknown:5",
    "transitions": Array [
      Object {
        "to": "EndProtocol",
        "transition": Object {
          "arguments": Array [],
          "name": "recvGreetingFromAlice",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/collection/CollectionProtocol.protocol 1`] = `
Object {
  "Empty": Object {
    "name": "Empty",
    "transitions": Array [
      Object {
        "to": "NonEmpty",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Node",
              "type": "Type",
            },
          ],
          "name": "put",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "close",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "Init": Object {
    "name": "Init",
    "transitions": Array [
      Object {
        "to": "Empty",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "initialise",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "NonEmpty": Object {
    "name": "NonEmpty",
    "transitions": Array [
      Object {
        "to": "NonEmpty",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Node",
              "type": "Type",
            },
          ],
          "name": "put",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "Unknown",
        "transition": Object {
          "arguments": Array [],
          "name": "get",
          "returnType": Object {
            "name": "Node",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "Unknown": Object {
    "name": "Unknown",
    "transitions": Array [
      Object {
        "to": "NonEmpty",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Node",
              "type": "Type",
            },
          ],
          "name": "put",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "decision:1",
        "transition": Object {
          "arguments": Array [],
          "name": "isEmpty",
          "returnType": Object {
            "name": "BooleanChoice",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "decision:1": Object {
    "name": "decision:1",
    "transitions": Array [
      Object {
        "to": "Empty",
        "transition": Object {
          "label": Object {
            "name": "TRUE",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "NonEmpty",
        "transition": Object {
          "label": Object {
            "name": "FALSE",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/collection/StackUser/StackUserProtocol.protocol 1`] = `
Object {
  "Consume": Object {
    "name": "Consume",
    "transitions": Array [
      Object {
        "to": "Consume",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Stack",
              "type": "Type",
            },
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "Stack",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "Consume",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Stack",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "Stack",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "Init",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Stack",
              "type": "Type",
            },
          ],
          "name": "consume",
          "returnType": Object {
            "name": "Stack",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "Init": Object {
    "name": "Init",
    "transitions": Array [
      Object {
        "to": "Consume",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Stack",
              "type": "Type",
            },
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "Stack",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "Consume",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Stack",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "Stack",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "close",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/collection/StackUser2/StackUserProtocol.protocol 1`] = `
Object {
  "Consume": Object {
    "name": "Consume",
    "transitions": Array [
      Object {
        "to": "Consume",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "Consume",
        "transition": Object {
          "arguments": Array [],
          "name": "produce",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "Init",
        "transition": Object {
          "arguments": Array [],
          "name": "consume",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "Init": Object {
    "name": "Init",
    "transitions": Array [
      Object {
        "to": "Consume",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "produce",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "Consume",
        "transition": Object {
          "arguments": Array [],
          "name": "produce",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "close",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/distributed-client-travelagency-bank/AProtocol.protocol 1`] = `
Object {
  "State0": Object {
    "name": "State0",
    "transitions": Array [
      Object {
        "to": "State1",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_requestStringFromC",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State1": Object {
    "name": "State1",
    "transitions": Array [
      Object {
        "to": "State2",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "send_dataintToC",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State2": Object {
    "name": "State2",
    "transitions": Array [
      Object {
        "to": "decision:1",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_Choice1LabelFromB",
          "returnType": Object {
            "name": "Choice1",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State3": Object {
    "name": "State3",
    "transitions": Array [
      Object {
        "to": "State4",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_approveBooleanFromB",
          "returnType": Object {
            "name": "Boolean",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State4": Object {
    "name": "State4",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "send_invoiceStringToBC",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State5": Object {
    "name": "State5",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_refuseBooleanFromB",
          "returnType": Object {
            "name": "Boolean",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "decision:1": Object {
    "name": "decision:1",
    "transitions": Array [
      Object {
        "to": "State3",
        "transition": Object {
          "label": Object {
            "name": "APPROVE",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "State5",
        "transition": Object {
          "label": Object {
            "name": "REFUSE",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/distributed-client-travelagency-bank/BProtocol.protocol 1`] = `
Object {
  "State0": Object {
    "name": "State0",
    "transitions": Array [
      Object {
        "to": "State1",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_paymentintFromC",
          "returnType": Object {
            "name": "int",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State1": Object {
    "name": "State1",
    "transitions": Array [
      Object {
        "to": "State2",
        "transition": Object {
          "arguments": Array [],
          "name": "send_APPROVEToCA",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "State4",
        "transition": Object {
          "arguments": Array [],
          "name": "send_REFUSEToCA",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State2": Object {
    "name": "State2",
    "transitions": Array [
      Object {
        "to": "State3",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Boolean",
              "type": "Type",
            },
          ],
          "name": "send_approveBooleanToCA",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State3": Object {
    "name": "State3",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_invoiceStringFromA",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State4": Object {
    "name": "State4",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Boolean",
              "type": "Type",
            },
          ],
          "name": "send_refuseBooleanToCA",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/distributed-client-travelagency-bank/Bank.protocol 1`] = `
Object {
  "State0": Object {
    "name": "State0",
    "transitions": Array [
      Object {
        "to": "State1",
        "transition": Object {
          "arguments": Array [],
          "name": "receivePayment",
          "returnType": Object {
            "name": "Data",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State1": Object {
    "name": "State1",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "boolean",
              "type": "Type",
            },
          ],
          "name": "sendApproval",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/distributed-client-travelagency-bank/CProtocol.protocol 1`] = `
Object {
  "State0": Object {
    "name": "State0",
    "transitions": Array [
      Object {
        "to": "State1",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "send_requestStringToA",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State1": Object {
    "name": "State1",
    "transitions": Array [
      Object {
        "to": "State2",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_dataintFromA",
          "returnType": Object {
            "name": "int",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State2": Object {
    "name": "State2",
    "transitions": Array [
      Object {
        "to": "State3",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "int",
              "type": "Type",
            },
          ],
          "name": "send_paymentintToB",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State3": Object {
    "name": "State3",
    "transitions": Array [
      Object {
        "to": "decision:1",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_Choice1LabelFromB",
          "returnType": Object {
            "name": "Choice1",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State4": Object {
    "name": "State4",
    "transitions": Array [
      Object {
        "to": "State5",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_approveBooleanFromB",
          "returnType": Object {
            "name": "Boolean",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State5": Object {
    "name": "State5",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_invoiceStringFromA",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State6": Object {
    "name": "State6",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "receive_refuseBooleanFromB",
          "returnType": Object {
            "name": "Boolean",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "decision:1": Object {
    "name": "decision:1",
    "transitions": Array [
      Object {
        "to": "State4",
        "transition": Object {
          "label": Object {
            "name": "APPROVE",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "State6",
        "transition": Object {
          "label": Object {
            "name": "REFUSE",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/distributed-client-travelagency-bank/Client.protocol 1`] = `
Object {
  "State0": Object {
    "name": "State0",
    "transitions": Array [
      Object {
        "to": "State1",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Travel",
              "type": "Type",
            },
          ],
          "name": "sendRequest",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State1": Object {
    "name": "State1",
    "transitions": Array [
      Object {
        "to": "State2",
        "transition": Object {
          "arguments": Array [],
          "name": "receiveData",
          "returnType": Object {
            "name": "Data",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State2": Object {
    "name": "State2",
    "transitions": Array [
      Object {
        "to": "State3",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Data",
              "type": "Type",
            },
          ],
          "name": "payment",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State3": Object {
    "name": "State3",
    "transitions": Array [
      Object {
        "to": "decision:1",
        "transition": Object {
          "arguments": Array [],
          "name": "receiveApproval",
          "returnType": Object {
            "name": "boolean",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State4": Object {
    "name": "State4",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "receiveInvoice",
          "returnType": Object {
            "name": "Invoice",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "decision:1": Object {
    "name": "decision:1",
    "transitions": Array [
      Object {
        "to": "State4",
        "transition": Object {
          "label": Object {
            "name": "true",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "end",
        "transition": Object {
          "label": Object {
            "name": "false",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/distributed-client-travelagency-bank/TravelAgency.protocol 1`] = `
Object {
  "State0": Object {
    "name": "State0",
    "transitions": Array [
      Object {
        "to": "State1",
        "transition": Object {
          "arguments": Array [],
          "name": "receiveRequest",
          "returnType": Object {
            "name": "Travel",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State1": Object {
    "name": "State1",
    "transitions": Array [
      Object {
        "to": "State2",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Data",
              "type": "Type",
            },
          ],
          "name": "sendData",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State2": Object {
    "name": "State2",
    "transitions": Array [
      Object {
        "to": "decision:1",
        "transition": Object {
          "arguments": Array [],
          "name": "receiveApproval",
          "returnType": Object {
            "name": "boolean",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State3": Object {
    "name": "State3",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "Invoice",
              "type": "Type",
            },
          ],
          "name": "sendInvoice",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "decision:1": Object {
    "name": "decision:1",
    "transitions": Array [
      Object {
        "to": "State3",
        "transition": Object {
          "label": Object {
            "name": "true",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "end",
        "transition": Object {
          "label": Object {
            "name": "false",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/file.protocol 1`] = `
Object {
  "Close": Object {
    "name": "Close",
    "transitions": Array [
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "close",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "Init": Object {
    "name": "Init",
    "transitions": Array [
      Object {
        "to": "decision:1",
        "transition": Object {
          "arguments": Array [],
          "name": "open",
          "returnType": Object {
            "name": "Status",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "Open": Object {
    "name": "Open",
    "transitions": Array [
      Object {
        "to": "decision:2",
        "transition": Object {
          "arguments": Array [],
          "name": "hasNext",
          "returnType": Object {
            "name": "Boolean",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "end",
        "transition": Object {
          "arguments": Array [],
          "name": "close",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "Read": Object {
    "name": "Read",
    "transitions": Array [
      Object {
        "to": "Open",
        "transition": Object {
          "arguments": Array [],
          "name": "read",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "decision:1": Object {
    "name": "decision:1",
    "transitions": Array [
      Object {
        "to": "Open",
        "transition": Object {
          "label": Object {
            "name": "OK",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "end",
        "transition": Object {
          "label": Object {
            "name": "ERROR",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "decision:2": Object {
    "name": "decision:2",
    "transitions": Array [
      Object {
        "to": "Read",
        "transition": Object {
          "label": Object {
            "name": "TRUE",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "Close",
        "transition": Object {
          "label": Object {
            "name": "FALSE",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/infinite/BankProtocol.protocol 1`] = `
Object {
  "State0": Object {
    "name": "State0",
    "transitions": Array [
      Object {
        "to": "State0",
        "transition": Object {
          "arguments": Array [],
          "name": "receivePayment",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/local-client-travelagency-bank/BankProtocol.protocol 1`] = `
Object {
  "State0": Object {
    "name": "State0",
    "transitions": Array [
      Object {
        "to": "State0",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "receivePayment",
          "returnType": Object {
            "name": "PaymentStatus",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/local-client-travelagency-bank/ClientProtocol.protocol 1`] = `
Object {
  "State0": Object {
    "name": "State0",
    "transitions": Array [
      Object {
        "to": "State0",
        "transition": Object {
          "arguments": Array [],
          "name": "receiveInfo",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "State1",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "sendRequest",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State1": Object {
    "name": "State1",
    "transitions": Array [
      Object {
        "to": "decision:1",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "tryPayment",
          "returnType": Object {
            "name": "PaymentStatus",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State2": Object {
    "name": "State2",
    "transitions": Array [
      Object {
        "to": "State0",
        "transition": Object {
          "arguments": Array [],
          "name": "receiveInvoice",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "decision:1": Object {
    "name": "decision:1",
    "transitions": Array [
      Object {
        "to": "State2",
        "transition": Object {
          "label": Object {
            "name": "OK",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "State0",
        "transition": Object {
          "label": Object {
            "name": "KO",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "State1",
        "transition": Object {
          "label": Object {
            "name": "TA",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;

exports[`mungo examples: automaton test/fixtures/local-client-travelagency-bank/TravelAgencyProtocol.protocol 1`] = `
Object {
  "State0": Object {
    "name": "State0",
    "transitions": Array [
      Object {
        "to": "State0",
        "transition": Object {
          "arguments": Array [],
          "name": "getInfo",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "type": "Method",
        },
      },
      Object {
        "to": "State1",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "receiveRequest",
          "returnType": Object {
            "name": "void",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State1": Object {
    "name": "State1",
    "transitions": Array [
      Object {
        "to": "decision:1",
        "transition": Object {
          "arguments": Array [
            Object {
              "name": "String",
              "type": "Type",
            },
          ],
          "name": "tryPayment",
          "returnType": Object {
            "name": "PaymentStatus",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "State2": Object {
    "name": "State2",
    "transitions": Array [
      Object {
        "to": "State0",
        "transition": Object {
          "arguments": Array [],
          "name": "getInvoice",
          "returnType": Object {
            "name": "String",
            "type": "Type",
          },
          "type": "Method",
        },
      },
    ],
  },
  "decision:1": Object {
    "name": "decision:1",
    "transitions": Array [
      Object {
        "to": "State2",
        "transition": Object {
          "label": Object {
            "name": "OK",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "State0",
        "transition": Object {
          "label": Object {
            "name": "KO",
            "type": "Type",
          },
          "type": "Label",
        },
      },
      Object {
        "to": "State1",
        "transition": Object {
          "label": Object {
            "name": "TA",
            "type": "Type",
          },
          "type": "Label",
        },
      },
    ],
  },
  "end": Object {
    "name": "end",
    "transitions": Array [],
  },
}
`;
